--- a/front/src/sass/_gallery.scss
+++ b/front/src/sass/_gallery.scss
@@ -1,9 +1,9 @@
-@use 'variables';
+@use 'variables' as v;
 @use 'mixins';
 
 .gallery{
     &__image-container{
-        border: 1px solid black;
+        //border: 1px solid black;
         height: 300px;
         width: 100%;
         background-image: url('../public/images/image-product-1.jpg');
@@ -12,15 +12,33 @@
         
     }
     &__previous{
-        @include mixins.image-btn(170px, 15px);
+        @include mixins.image-btn(170px, 15px, false);
     }
     &__next{
-        @include mixins.image-btn(170px, 320px);
+        @include mixins.image-btn(170px, 320px, false);
     }
-    &__thumbnail{
+    &__thumbnails{
         display: none;
         @media(min-width: 1115px){
-        display: block;
+        display: flex;
+        justify-content: space-between;
         }
+    }
+    &__thumbnail{
+        width: 90px;
+        border-radius: 16px;
+        &:hover{
+            cursor: pointer;
+            border: 2px solid v.$Orange;
+        }
+    }
+    @media (min-width: 1115px){ 
+            width: 446px;           
+            &__image-container{
+                background-position-y: 0 ;
+                border-radius: 16px;
+                height: 446px;
+                margin-bottom: 32px;
+            }
     }
 }
