--- a/front/src/sass/style.scss
+++ b/front/src/sass/style.scss
@@ -6,6 +6,8 @@
 @use 'gallery';
 @use 'details';
 @use 'input';
+@use 'cart-modal';
+@use 'modal-galery';
 
 .main-container{
     width: 375px;
@@ -16,5 +18,13 @@
         width: 1115px;
     }
 
+}
+
+.content{
+    @media(min-width:   1115px){
+        display: flex;
+        padding: 90px 50px;
+        gap: 124px;
+     }
 }
 
